--- a/src/main/java/com/company/app/BUILD
+++ b/src/main/java/com/company/app/BUILD
@@ -1,7 +1,9 @@
 load("@rules_java//java:defs.bzl", "java_binary")
 
+package(default_visibility = ["//visibility:public"])
+
 java_binary(
-    name = "App",
+    name = "app",
     srcs = glob(["*.java"]),
     deps = ["//src/main/java/com/company/common:common-lib"],
 )
